2012-01-31  Marek Polacek  <polacek@redhat.com>

	* libio/libio.h: Don't define _PARAMS.
	* locale/programs/config.h: Don't define PARAMS.
	* stdlib/strtol_l.c: Likewise.
	(__strtol_l): Remove PARAMS from the prototype.

2012-01-31  Ulrich Drepper  <drepper@gmail.com>

	* malloc/arena.c (arena_get2): Really don't call __get_nprocs if
	ARENA_TEST says not to.  Simplify test for creation of a new arena.
	Partially based on a patch by Siddhesh Poyarekar <siddhesh@redhat.com>.

2012-01-30  Ulrich Drepper  <drepper@gmail.com>

	* elf/dl-tls.c (__tls_get_addr): Optimize by transforming all calls
	into tail calls.
	(update_get_addr): New function.
	(tls_get_addr_tail): Take GET_ADDR_ARGS parameter, remove
	GET_ADDR_MODULE parameter.

2012-01-30  Joseph Myers  <joseph@codesourcery.com>

	* crypt/cert.c: Remove __STDC__ conditionals.
	* crypt/crypt-entry.c: Likewise.
	* crypt/crypt_util.c: Likewise.
	* libio/filedoalloc.c: Likewise.
	* libio/fileops.c: Likewise.
	* libio/genops.c: Likewise.
	* libio/iofclose.c: Likewise.
	* libio/iofdopen.c: Likewise.
	* libio/iofopen.c: Likewise.
	* libio/iofopen64.c: Likewise.
	* libio/iogetdelim.c: Likewise.
	* libio/iopopen.c: Likewise.
	* libio/obprintf.c: Likewise.
	* libio/oldfileops.c: Likewise.
	* libio/oldiofclose.c: Likewise.
	* libio/oldiofdopen.c: Likewise.
	* libio/oldiofopen.c: Likewise.
	* libio/oldiopopen.c: Likewise.
	* libio/wfiledoalloc.c: Likewise.
	* libio/wgenops.c: Likewise.
	* locale/programs/xmalloc.c: Likewise.
	* misc/syslog.c: Likewise.
	* stdio-common/xbug.c: Likewise.
	* string/memchr.c: Likewise.
	* string/memcmp.c: Likewise.
	* string/memrchr.c: Likewise.
	* string/rawmemchr.c: Likewise.
	* sysdeps/posix/getcwd.c: Likewise.
	* time/strftime_l.c: Likewise.

2012-01-30  Joseph Myers  <joseph@codesourcery.com>

	* configure.in (libc_cv_cc_sse2avx): AC_SUBST.
	* config.make.in (config-cflags-sse2avx): Define.
	* sysdeps/x86_64/fpu/multiarch/Makefile (CFLAGS-slowexp-avx.c):
	Fix typo.
