@@ -1,3 +1,10 @@
+2012-01-31  Joseph Myers  <joseph@codesourcery.com>
+
+	* sysdeps/powerpc/bits/mathdef.h (float_t): Always define as
+	float.
+	* sysdeps/sh/sh4/bits/mathdef.h: Likewise.
+	* sysdeps/sparc/bits/mathdef.h: Likewise.
+
 2012-01-31  Marek Polacek  <polacek@redhat.com>
 
 	* libio/libio.h: Don't define _PARAMS.
